examples/multiple_nodes/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ing
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: nginx-svc
    servicePort: 80
